Mechanic and Inventory Paths Added and Slight Revisions
