# Mechanic-Shop/application/blueprints/Inventory/routes.py
@@ -4,7 +4,6 @@ from sqlalchemy import select
 from application.models import Inventory, db
 from .inventorySchema import inventory_schema
 from . import inventory_bp
-from application.Utils.util import encode_token, token_required
 
 # Create Endpoints for CRUD operations
 # Inventory Endpoints
@@ -20,7 +19,7 @@ def get_part():
     return jsonify(inventory_schema.dump(parts, many=True)), 200
 
 # POST a NEW Parts
-@inventory_bp.route('/', methods=['POST'])
+@inventory_bp.route('/create', methods=['POST'])
 def create_part():
     try:
         new_part = inventory_schema.load(request.json)
@@ -34,7 +33,7 @@ def create_part():
         return jsonify({"message": "Invalid input", "errors": e.messages}), 400
 
 # PUT to UPDATE an Inventory Part
-@inventory_bp.route('/<int:inventory_id>', methods=['PUT'])
+@inventory_bp.route('/update/<int:inventory_id>', methods=['PUT'])
 def update_part(inventory_id):
     part = db.session.get(Inventory, inventory_id)
     if part:
@@ -54,7 +53,7 @@ def update_part(inventory_id):
         return jsonify({"message": "inventory not found"}), 404
 
 # DELETE a Inventory Part
-@inventory_bp.route('/<int:inventory_id>', methods=['DELETE'])
+@inventory_bp.route('/delete/<int:inventory_id>', methods=['DELETE'])
 def delete_parts(inventory_id):
     query = select(Inventory).where(Inventory.inventory_id == inventory_id)
     part = db.session.execute(query).scalars().first()
@@ -67,7 +66,7 @@ def delete_parts(inventory_id):
 
 @inventory_bp.route("/search", methods=['GET'])
 def search_parts():
-    part = request.args.get("part")
+    part = request.args.get("name")
 
     # use the wirldcard format to allow partial input and display multiple 
     query = select(Inventory).where(Inventory.name.like(f"%{part}%"))
